fixing todo 1 to 4c